<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical" android:layout_height="match_parent" android:layout_width="match_parent">
    <RelativeLayout android:id="@+id/relativeLayout1" android:layout_width="match_parent" android:layout_height="wrap_content">
        <RelativeLayout android:layout_height="wrap_content" android:id="@+id/relativeLayout2" android:layout_alignParentBottom="true" android:layout_width="wrap_content"></RelativeLayout>
        <EditText android:text="EditText" android:id="@+id/editText1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentRight="true"></EditText>
        <TextView android:text="@string/FrontSide" android:id="@+id/textView1" android:textSize="45sp" android:layout_height="wrap_content" android:gravity="center_vertical|center_horizontal" android:textStyle="bold" android:layout_width="wrap_content" android:layout_toLeftOf="@+id/editText1" android:layout_alignTop="@+id/editText1" android:layout_alignBottom="@+id/editText1"></TextView>
        <TextView android:text="@string/BackSide" android:id="@+id/textView2" android:textSize="45sp" android:layout_height="wrap_content" android:gravity="center_vertical|center_horizontal" android:layout_width="wrap_content" android:layout_below="@+id/textView1" android:layout_alignLeft="@+id/textView1" android:layout_alignRight="@+id/textView1"></TextView>
        <EditText android:text="EditText" android:id="@+id/editText2" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_below="@+id/editText1" android:layout_alignLeft="@+id/editText1" android:layout_alignRight="@+id/editText1"></EditText>
        <RelativeLayout android:layout_height="wrap_content" android:id="@+id/relativeLayout3" android:layout_below="@+id/textView1" android:layout_width="wrap_content" android:layout_alignLeft="@+id/textView1" android:layout_alignRight="@+id/textView1">
        </RelativeLayout>
        <LinearLayout android:layout_alignParentBottom="true" android:id="@+id/linearLayout1" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/mcard" android:id="@+id/Cardmaker"></Button>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
